# scion

./: .bazelrc-docker  .gitmodules  BUILD.bazel  Dockerfile  Makefile  WORKSPACE  bazel-remote.yml  build-docker.sh  go.mod  go.sum  go_deps.bzl  sync-repo.sh
.github/workflows/: gh-actions-build-flowtele.yml
env/debian/: deps
go/cs/: BUILD.bazel  cs.go  main.go
go/cs/beacon/: selection_algo.go
go/cs/config/: config.go  sample.go
go/flowtele/: BUILD.bazel  path.go  socket.go
go/flowtele/dbus/: BUILD.bazel  dbus_base.go  fshaper_dbus.go  quic_dbus.go  quic_signal.go  signal_base.go
go/flowtele/dbus/datalogger/: BUILD.bazel  datalogger.go
go/flowtele/fshaper/: fshaper.go
go/flowtele/listener/: BUILD.bazel  quic_listener.go
go/flowtele/stream/: BUILD.bazel  run-server-proxy.sh  server.go
go/flowtele/utils/: BUILD.bazel  logger.go  scion.go
go/integration/: common.go
go/integration/end2end_integration/: main.go
go/lib/env/: env.go
go/lib/env/envtest/: config.go
go/lib/infra/infraenv/: infraenv.go
go/lib/sciond/: apitypes.go  grpc.go  sciond.go
go/lib/sciond/fake/: fake.go  fake_test.go
go/lib/sciond/mock_sciond/: mock.go
go/pkg/app/path/: BUILD.bazel  path.go
go/pkg/cs/: BUILD.bazel  tasks.go
go/pkg/gateway/: gateway.go
go/pkg/gateway/control/fake/: BUILD.bazel  config.go  gateway.go
go/pkg/grpc/: dialer.go
go/pkg/proto/control_plane/: drkey.pb.go
go/pkg/proto/control_plane/mock_control_plane/: mock.go
go/pkg/proto/daemon/: daemon.pb.go
go/pkg/proto/drkey/: mgmt.pb.go
go/pkg/sciond/fetcher/: fetcher.go
go/pkg/sciond/fetcher/mock_fetcher/: mock.go
go/pkg/sciond/internal/servers/: grpc.go
go/pkg/showpaths/: BUILD.bazel  showpaths.go
go/pkg/storage/: BUILD.bazel  storage.go
go/pktgen/: pktgen.go
go/posix-gateway/: main.go
go/scion/: ping.go
go/scion-pki/certs/: renew.go
go/sciond/: BUILD.bazel  main.go
