load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = [
        "path.go",
        "socket.go",
    ],
    importpath = "github.com/scionproto/scion/go/flowtele",
    visibility = ["//visibility:private"],
    deps = [
        "//go/flowtele/dbus:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/sciond:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/snet/squic:go_default_library",
        "//go/lib/sock/reliable:go_default_library",
        "@com_github_lucas_clemente_quic_go//:go_default_library",
        "@com_github_lucas_clemente_quic_go//flowtele:go_default_library",
    ],
)

scion_go_binary(
    name = "flowtele_socket",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "flowtele",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["dbus_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_godbus_dbus_v5//:go_default_library"],
)
