load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = ["quic_listener.go"],
    importpath = "github.com/scionproto/scion/go/flowtele/listener",
    visibility = ["//visibility:private"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/sciond:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/snet/squic:go_default_library",
        "//go/lib/sock/reliable:go_default_library",
        "//go/lib/log:go_default_library",
        "@com_github_lucas_clemente_quic_go//:go_default_library",
    ],
)

scion_go_binary(
    name = "flowtele_listener",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "listener",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
